@startuml

hide circle
skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor White
    BorderColor Black
    FontColor Black
}

class QuizManager {
    - static Logger logger
    - QuizSession quizSession
    - QuizResults quizResults
    - TopicManager topicManager
    + QuizManager()
    + selectQuizToAttempt(topicName: String): void
    + addResultsAndPrintScore(): void
    + printQuizzesAvailable(): void
    + printPastResults(): void
    + addInput(input: String): void
    + saveResults(): void
    + getQuizSession(): QuizSession
    + getQuizResults(): QuizResults
    + getTopicManager(): TopicManager
}

class QuizSession {
    + startQuiz(selectedTopic: Topic): void
    + getQuizScore(): int
}

class QuizResults {
    + generateComment(score: int): String
    + addResult(score: int, comment: String): void
    + loadResults(): void
    + saveResults(): void
    + getPastResults(): String
}

class TopicManager {
    + getTopic(topicName: String): Topic
    + loadQuestions(): void
    + printTopics(): void
    + addFlashcardByUser(input: String): void
}

QuizManager *--> "1" QuizSession
QuizManager *--> "1" QuizResults
QuizManager *--> "1" TopicManager


@enduml
